# mlflow-practice

./: .gitignore  Dockerfile.mlflow  README.md  docker-compose.yaml  example.py  pyproject.toml
mlruns/0/: meta.yaml
mlruns/286273541457706970/: meta.yaml
mlruns/286273541457706970/0a75d15d3ddd40dfa37fa126255fe103/: meta.yaml
mlruns/286273541457706970/0a75d15d3ddd40dfa37fa126255fe103/tags/: mlflow.runName
mlruns/286273541457706970/3211b71704ed44879c218b47a50258cd/: meta.yaml
mlruns/286273541457706970/3211b71704ed44879c218b47a50258cd/metrics/: accuracy
mlruns/286273541457706970/3211b71704ed44879c218b47a50258cd/tags/: mlflow.runName
mlruns/286273541457706970/3f88318f02f54d1c86e7675b72af42e9/: meta.yaml
mlruns/286273541457706970/3f88318f02f54d1c86e7675b72af42e9/metrics/: accuracy
mlruns/286273541457706970/3f88318f02f54d1c86e7675b72af42e9/tags/: mlflow.runName
mlruns/286273541457706970/72bab82f3f924224a9c02966f45476b5/: meta.yaml
mlruns/286273541457706970/72bab82f3f924224a9c02966f45476b5/metrics/: accuracy
mlruns/286273541457706970/72bab82f3f924224a9c02966f45476b5/tags/: mlflow.runName
mlruns/286273541457706970/cfb9914140894686b98a78fddeea23fd/: meta.yaml
mlruns/286273541457706970/cfb9914140894686b98a78fddeea23fd/metrics/: accuracy
mlruns/286273541457706970/cfb9914140894686b98a78fddeea23fd/tags/: mlflow.runName
mlruns/286273541457706970/models/m-1978feb2f6f241ac828775b0b67e08c0/: meta.yaml
mlruns/models/tracking-quickstart/: meta.yaml
scripts/: setup_minio.py
src/: __init__.py  basic_example.py  model_comparison.py
(+22 files in other folders)
